# pet-services-api/docs/swagger.yaml
@@ -645,6 +645,11 @@ definitions:
       total_pages:
         type: integer
     type: object
+  usecases.GetRequestOutput:
+    properties:
+      request:
+        $ref: '#/definitions/entities.Request'
+    type: object
   usecases.GetServiceOutput:
     properties:
       service:
@@ -1843,6 +1848,48 @@ paths:
       security:
       - Bearer: []
       summary: Cria uma solicitação de serviço
+      tags:
+      - Solicitações
+  /requests/{request_id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: ID da solicitação
+        in: path
+        name: request_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/usecases.GetRequestOutput'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/exceptions.ProblemDetails'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/exceptions.ProblemDetails'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/exceptions.ProblemDetails'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/exceptions.ProblemDetails'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/exceptions.ProblemDetails'
+      security:
+      - Bearer: []
+      summary: Obtém detalhes de uma solicitação
       tags:
       - Solicitações
   /requests/{request_id}/accept:
